--- a/vertical-timeline-jenny/css/style.css
+++ b/vertical-timeline-jenny/css/style.css
@@ -25,7 +25,7 @@ body { /*for the stuff in the div contents*/
 }
 
 a {
-  color: black;
+  color: gray;
   text-decoration: none;
   font-family: "Open Sans", sans-serif; /*stuff for the buttons that don't exist anymore*/
 }
