--- a/vertical-timeline-jenny/css/style.css
+++ b/vertical-timeline-jenny/css/style.css
@@ -95,7 +95,25 @@ header h1 {
     font-size: 3rem; /*use this to change font size not the line above*/
   }
 }
-
+div.fixed {
+            position: fixed;
+            top: 0;
+            border: 3px solid #9A3334;
+            background-color: #9A3334;
+            z-index: 2;  
+            width: 100%;
+          }
+span.content-title{
+            font-family: 'dinosaurregular';
+            color: #217C7E;
+            font-size: 40px;
+            text-align: center; 
+          }
+a.hrefs{
+            font-family: sans-serif;
+            color: #3399FF;
+            font-size: 20px;
+          }
 #cd-timeline {
   position: relative;
   padding: 2em 0;
