--- a/vertical-timeline-jenny/css/style.css
+++ b/vertical-timeline-jenny/css/style.css
@@ -107,11 +107,14 @@ div.fixed {
             z-index: 2;  
             width: 100%;
           }
+          /* In the style tag, z-index is basically saying that you want this layer to be on the top
+          of other items. This helped us because now we can click the button anytime we wanted unlike
+          before when it would hide underneath other items.*/
 span.content-title{
             font-family: 'dinosaurregular';
             color: #217C7E;
             font-size: 40px;
-            text-align: center; 
+            position: center;
           }
 a.hrefs{
             font-family: sans-serif;
