--- a/TitanosaurTimeline/css/style.css
+++ b/TitanosaurTimeline/css/style.css
@@ -37,7 +37,7 @@ body { /*for the stuff in the div contents*/
 }
 
 a { /*styling for the ones with links*/
-  color: #aaafff;
+  color: #ffd480;
   text-decoration: none;
   font-family: "Open Sans", sans-serif;
 }
@@ -345,7 +345,7 @@ font-size: 25px;
 .cd-timeline-content .cd-read-more {
   float: right;
   padding: .8em 1em;
-  background: #aaafff; 
+  background: #ffd480; 
   color: white;
   border-radius: 0.25em;
 }
