--- a/TitanosaurTimeline/css/style.css
+++ b/TitanosaurTimeline/css/style.css
@@ -135,7 +135,7 @@ span.content-title{
           }
 a.hrefs{
             font-family: sans-serif;
-            color: #3399FF;
+            color: #ffd480;
             font-size: 20px;
           }
 #cd-timeline {
