--- a/TitanosaurTimeline/css/style.css
+++ b/TitanosaurTimeline/css/style.css
@@ -146,7 +146,7 @@ a.hrefs{
 #cd-timeline {
   position: relative;
   padding: 2em 0;
-  margin-top: 4em;
+  margin-top: 4em; /*changed*/
   margin-bottom: 2em;
 }
 #cd-timeline::before {
